# mock-test

./: .env.example  .gitignore  git_log_full_paper.txt  pyproject.toml  question_viewer.html  temp_pipeline.py
admin-panel/: package-lock.json  package.json  tailwind.config.js
admin-panel/src/: App.tsx  index.css
alembic/: env.py
alembic/versions/: 1f2d61af3b1a_initial_schema.py  37fb3c0644f7_add_exam_name_subject_layout_type_to_.py  a9c2e4f17b83_add_syllabus_table_with_seed_data.py
app/: __init__.py  config.py  database.py  main.py
app/api/: __init__.py  ingestion.py  natural_query.py  papers.py  questions.py  syllabus.py
docs/: full_paper_builder.md  technical_handbook.md
scripts/: check_answer_key_pages.py  check_blocks.py  check_blocks2.py  check_tables.py  delete_ingestion.py  delete_latest_2.py  delete_latest_ingestion.py  diag_backslash.py  diag_q2.py  dump_answer_key.py  dump_blocks.py  final_smoke_test.py  inspect_mineru_api.py  inspect_opts2.py  inspect_remaining.py  list_ingestions.py  ocr_answer_key.py  patch_cell_re.py  patch_cell_re2.py  patch_cell_re3.py  patch_embedded_array.py  patch_equation_parser.py  quick_diag.py  run_mineru_single.py  run_pipeline_direct.py  test_full_paper_builder.py  test_metadata_context.py  test_ollama_smoke.py  trace_answer_key.py  upload_and_test.py  verify_bugs.py
test-ingestion/: .gitignore  README.md  custom_download.py  download_base.py  download_models.py  requirements.txt  test_one_page.py
tests/: test_audit_fixes.py  test_full_paper_builder.py  test_post_processor.py  test_question_builder.py
(+69 files in other folders)
